Keycard "refactoring" fixing many issues and UI/UX  (#22214)

--- a/translations/en.json
+++ b/translations/en.json
@@ -123,6 +123,7 @@
   "all-currencies": "All currencies",
   "all-messages": "All messages",
   "all-networks": "All networks",
+  "all-slots-occupied": "All slots occupied",
   "all-time": "All time",
   "allow": "Allow",
   "allow-and-send": "Allow and send",
@@ -307,6 +308,7 @@
   "cant-open-public-chat": "Can't open public chat",
   "cant-report-bug": "Can't report a bug",
   "cant-store-new-keys": "You can’t use it to store new keys right now",
+  "cant-use-keycard-device": "You can’t use this Keycard on this device",
   "cant-use-right-now": "You can’t use it right now",
   "card-is-blank": "This card is blank",
   "card-reseted": "Card has been reseted",
@@ -543,6 +545,7 @@
   "copy-address": "Copy address",
   "copy-all-details": "Copy all details",
   "copy-info": "Copy info",
+  "copy-keycard": "Create a copy of this Keycard",
   "copy-message-id": "Copy message ID",
   "copy-qr": "Copy code",
   "copy-text": "Copy text",
@@ -1078,7 +1081,7 @@
   "fetching-community": "Fetching community...",
   "fetching-the-price-took-longer-than-expected": "Fetching the price took longer than expected.\nPlease, try again later.",
   "finalise-migration": "Finalise migration",
-  "finalise-migration-instructions": "Finalise migration to use this Keycard for logging in and signing transactions on this device",
+  "finalise-migration-instructions": "Finalise migration to use this Keycard for signing in and authorising transactions on this device",
   "finalized-on": "Finalized on",
   "find": "Find",
   "find-it-in-setting": "Find it in Settings on your other synced device",
@@ -1409,6 +1412,7 @@
   "keycard-factory-reset-title": "Are you sure you want to perform a factory reset?",
   "keycard-free-pairing-slots": "Keycard has {{n}} free pairing slots",
   "keycard-full": "Keycard is full",
+  "keycard-has-keypair": "If Keycard has a profile key pair on it",
   "keycard-has-multiaccount-on-it": "This card is full. Each card can hold one main key pair",
   "keycard-init-description": "Put the card to the back of your phone to continue",
   "keycard-init-title": "Looking for cards...",
@@ -1540,10 +1544,12 @@
   "logging": "Logging",
   "logging-enabled": "Logging enabled?",
   "login-pin-description": "Enter your 6-digit passcode to unlock your keys",
+  "login-with-keycard": "Log in with this Keycard",
   "logout": "Log out",
   "logout-app-content": "The account will be logged out. When you unlock it again, the selected network will be used",
   "logout-are-you-sure": "Are you sure you want\nto log out?",
   "logout-key-management": "You need to log out to access key management.",
+  "logout-login-keycard": "Log out and login with this Keycard",
   "logout-title": "Log out?",
   "logs-of-actions-withing-the-app": "Logs of actions within the app, including button presses and screen visits",
   "looking-for-cards": "Looking for cards...",
@@ -2084,12 +2090,14 @@
   "processing": "Just a moment",
   "product-information": "Product Information",
   "profile": "Profile",
+  "profile-already-added": "Profile already added",
   "profile-bio": "Profile bio",
   "profile-deleted-content": "Your profile was successfully deleted",
   "profile-deleted-keycard": "You can now restore another key pair on your Keycard",
   "profile-deleted-title": "Profile deleted",
   "profile-details": "Profile details",
   "profile-keys-on-keycard": "If your profile keys are stored on a Keycard",
+  "profile-linked-keycard": "Profile linked with the key pair on this Keycard has already been added to the device",
   "profile-name": "Profile name",
   "profile-name-is-too-long": "Profile name is too long",
   "profile-not-found": "Profile not found",
@@ -2133,6 +2141,7 @@
   "read-more": "Read more",
   "ready-add-keypair-keycard": "Ready to add key pair to Keycard",
   "ready-add-keypair-keycard-documentation": "When you create a Status profile, the Status app generates cryptographic keys for your profile authentication and authorization.\n\nYour Keycard stores the cryptographic keys for your Status profile, permanently offline and isolated from the internet, and also secures your Wallet accounts.",
+  "ready-generate-keypair": "Ready to generate key pair on Keycard",
   "ready-keycard": "Get your Keycard ready",
   "ready-to-change-pin": "Ready to change PIN",
   "ready-to-import-keypair-keycard": "Ready to import key pair to the Keycard",
@@ -2350,6 +2359,7 @@
   "select-network-to-receive": "Select network to receive",
   "select-networks": "Select networks",
   "select-new-location-for-keys": "Select a new location to save your private key(s)",
+  "select-profile": "Select profile",
   "select-token": "Select token",
   "select-token-to-receive": "Select token to receive",
   "select-token-to-swap": "Select token to Swap",
@@ -2816,6 +2826,7 @@
   "use-keycard-instead-password": "To use Keycard instead of password",
   "use-keycard-login-sign": "Use this Keycard to sign in and authorize transactions",
   "use-keycard-subtitle": "Keys will be stored on your Keycard",
+  "use-keypair-keycard": "Use the key pair stored on Keycard",
   "use-photo": "Use Photo",
   "use-recovery-phrase": "Use recovery phrase",
   "use-the-multichain-wallet": "Enjoy your multi-chain self-custodial wallet",
