Improve Error Handling Logic in Enter Seed Phrase Screen (#22252)

--- a/translations/en.json
+++ b/translations/en.json
@@ -24,6 +24,7 @@
   "access-key": "Access key",
   "account": "Account",
   "account-added": "Account added",
+  "account-already-exist-error": "The recovery phrase you entered is linked to a key pair already added to this device.",
   "account-color": "Account color",
   "account-content": "You can compare accounts in Status to bank accounts. Like a bank account, an account typically has an address and a balance; You use this account to transact on Ethereum. You can have multiple accounts in your wallet. All accessed by unlocking Status.",
   "account-created": "{{name}} created",
@@ -999,6 +1000,7 @@
   "enter-a-private-key": "Enter a private key",
   "enter-a-seed-phrase": "Enter a seed phrase",
   "enter-address": "Enter address",
+  "enter-another-recovery-phrase": "Enter another recovery phrase",
   "enter-channel": "Enter channel",
   "enter-chat-key": "Enter chat key or scan a QR",
   "enter-contact-code": "ENS (vitalik94) or chat key (0x04…)",
@@ -2333,6 +2335,8 @@
   "seed-key-uid-mismatch-desc-1": "The seed phrase you entered does not match {{multiaccount-name}}",
   "seed-key-uid-mismatch-desc-2": "To manage keys for this account verify your seed phrase and try again.",
   "seed-phrase-content": "A set of friendly-to-read words, randomly selected from the BIP39 standard list and used to recover or access your Ethereum account on other wallets and devices. Also referred to as a “mnemonic phrase,” “recovery phrase” or “wallet backup” across the crypto ecosystem. Most crypto apps use this same standard to generate accounts.",
+  "seed-phrase-dont-match": "The phrase you’ve entered not matching key pair that you want to back up",
+  "seed-phrase-dont-match-migrate-flow": "The phrase you’ve entered does not match your Status profile key pair",
   "seed-phrase-error": "Recovery phrase contains invalid words",
   "seed-phrase-incorrect": "Recovery phrase does not match key pair",
   "seed-phrase-info": "Enter 12, 18 or 24 words separated by spaces",
