[#22303] Keycard - Implement card scanning dialog (android) (#22328)

--- a/translations/en.json
+++ b/translations/en.json
@@ -813,7 +813,7 @@
   "disconnect-dapp-confirmation": "Are you sure you want to disconnect {{dapp}}?",
   "disconnect-dapp-fail": "Failed to disconnect {{dapp}} from {{account}}",
   "disconnect-dapp-success": "{{dapp}} disconnected from {{account}}",
-  "disconnected": "Chat offline",
+  "disconnected": "Disconnected",
   "discover": "Discover",
   "discover-communities": "Discover communities",
   "discover-web3": "Discover web3",
@@ -1203,7 +1203,7 @@
   "history-nodes": "Status nodes",
   "hit-photos-limit": "You can only add {{max-photos}} photos to your message",
   "hold-card": "Hold card to the back\n of your phone",
-  "hold-phone-near-keycard": "Hold your phone near a Status Keycard",
+  "hold-phone-near-keycard": "Hold your Keycard near NFC sensor",
   "hold-to-post-1": "Hold",
   "hold-to-post-2": "to post",
   "home": "Home",
@@ -1393,7 +1393,6 @@
   "keycard-backup": "Create a backup Keycard",
   "keycard-backup-success-body": "Backup card created successfully. You can now use it with your account just like the primary card.",
   "keycard-backup-success-title": "Backup successful",
-  "keycard-blocked": "Keycard has been blocked.\nYou need to reset card to continue using it.",
   "keycard-blocked": "Keycard is blocked",
   "keycard-can-use-with-new-passcode": "You can use this card with your new passcode",
   "keycard-cancel-setup-text": "This will cancel keycard setup. It's highly recommended to finish the setup in order to use keycard. Do you really want to cancel?",
@@ -2312,7 +2311,7 @@
   "scan-the-qr-code-or-copy-the-sync-code": "Scan the QR code or copy the sync code",
   "scan-tokens": "Scan tokens",
   "scan-with-status-app": "Scan with the Status app on another device",
-  "scanning": "Scanning for activity...",
+  "scanning": "Scanning...",
   "scanning-for-activity": "Scanning for activity...",
   "search": "Search",
   "search-assets": "Search assets",
