feat(wallet)_: Add status network sepolia (#22267)
This commit adds Status Network Sepolia.

Signed-off-by: Mohamed Javid <19339952+smohamedjavid@users.noreply.github.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -2436,6 +2436,7 @@
   "share-link-to-base": "Share link to Basescan",
   "share-link-to-eth": "Share link to Etherscan",
   "share-link-to-oeth": "Share link to Optimism Explorer",
+  "share-link-to-status-explorer": "Share link to Status Explorer",
   "share-logs": "Share logs",
   "share-my-profile": "Share my profile",
   "share-opensea-link": "Share OpenSea link",
@@ -2860,6 +2861,7 @@
   "view-address-on-basescan": "View address on Basescan",
   "view-address-on-etherscan": "View address on Etherscan",
   "view-address-on-optimistic": "View address on Optimistic",
+  "view-address-on-status-explorer": "View address on Status Explorer",
   "view-channel-members-and-details": "View channel members and details",
   "view-community-rules": "View Community Rules",
   "view-cryptokitties": "View in CryptoKitties",
@@ -2874,6 +2876,7 @@
   "view-on-eth": "View on Etherscan",
   "view-on-oeth": "View on Optimism Explorer",
   "view-on-opensea": "View on OpenSea",
+  "view-on-status-explorer": "View on Status Explorer",
   "view-pinned-messages": "View pinned messages",
   "view-profile": "View profile",
   "view-public-dashboard": "View public dashboard",
