Custom transaction settings: base fee, priority fee, nonce, gas (#22333)

--- a/translations/en.json
+++ b/translations/en.json
@@ -4,11 +4,11 @@
   "about-gas-amount": "AKA gas limit. Refers to the maximum number of computational steps (or units of gas) that a transaction can consume. It represents the complexity or amount of work required to execute a transaction or smart contract.\n\nThe gas limit is a cap on how much work the transaction can do on the blockchain. If the gas limit is set too low, the transaction may fail due to insufficient gas.",
   "about-key-storage-content": "Status will never access your private key. Be sure to backup your seed phrase. If you lose your phone it is the only way to access your keys.",
   "about-key-storage-title": "About key storage",
-  "about-max-base-fee": "When your transaction gets included in the block, any difference between your max base fee and the actual base fee will be refunded.",
+  "about-max-base-fee": "When your transaction gets included in the block, any difference between your max base fee and the actual base fee will be refunded.\n\nNote: the ETH amount shown for this value is calculated: max base fee (in GWEI) * max gas amount.",
   "about-names-content": "No one can pretend to be you! You’re anonymous by default and never have to reveal your real name. You can register a custom name for a small fee.",
   "about-names-title": "Names can’t be changed",
   "about-nonce": "Transaction counter ensuring transactions from your account are processed in the correct order and can’t be replayed. Each new transaction increments the nonce by 1, ensuring uniqueness and preventing double-spending.\n\nIf a transaction with a lower nonce is pending, higher nonce transactions will remain in the queue until the earlier one is confirmed.",
-  "about-priority-fee": "AKA miner tip. A voluntary fee you can add to incentivise miners or validators to prioritise your transaction.\n\nThe higher the tip, the faster your transaction is likely to be processed, especially curing periods of higher network congestion.",
+  "about-priority-fee": "AKA miner tip. A voluntary fee you can add to incentivise miners or validators to prioritise your transaction.\n\nThe higher the tip, the faster your transaction is likely to be processed, especially during periods of higher network congestion.\n\nNote: the ETH amount shown for this value is calculated: Priority fee (in GWEI) * Max gas amount",
   "about-sharing-data": "About sharing data",
   "accent-colour": "Accent colour",
   "accent-colour-updated": "Accent colour updated",
@@ -1115,8 +1115,12 @@
   "from-capitalized": "From",
   "from-label": "From",
   "gas-amount": "Gas amount",
+  "gas-amount-current": "Current: {{current}}",
+  "gas-amount-higher": "Too high. Maximum: {{high}}",
+  "gas-amount-higher-than": "Higher than necessary (current: {{current}})",
   "gas-amount-limit": "Gas amount limit",
-  "gas-amount-lower": "Too low. Recommended: {{current}} UNITS",
+  "gas-amount-lower": "Too low. Minimum: {{low}}",
+  "gas-amount-lower-than": "Lower than current (current: {{current}})",
   "gas-limit": "Gas limit",
   "gas-price": "Gas price",
   "gas-used": "Gas used",
@@ -1600,8 +1604,10 @@
   "max": "Max: {{number}}",
   "max-2-decimals": "Max. 2 decimals",
   "max-base-fee": "Max base fee",
-  "max-base-fee-higher": "Higher than necessary. Current: {{current}} GWEI",
-  "max-base-fee-lower": "Too low. Current: {{current}} GWEI ",
+  "max-base-fee-current": "Current: {{current}}",
+  "max-base-fee-higher": "Higher than necessary (current: {{current}})",
+  "max-base-fee-lower": "Lower than priority fee: {{priority-fee}}",
+  "max-base-fee-lower-recommended": "Lower than recommended (current: {{current}})",
   "max-fee": "Max fee",
   "max-fees": "Max fees",
   "max-gas-amount": "Max gas amount",
@@ -2075,8 +2081,10 @@
   "principles": "Principles",
   "priority": "Priority",
   "priority-fee": "Priority fee",
-  "priority-fee-higher": "More than necessary. Current: {{low}} - {{high}} GWEI",
-  "priority-fee-lower": "Too low. Current: {{low}} - {{high}} GWEI",
+  "priority-fee-current": "Current: {{current}}",
+  "priority-fee-higher": "Higher than necessary: {{low}} - {{high}}",
+  "priority-fee-higher-max-base": "Higher than max base fee: {{max-base-fee}}",
+  "priority-fee-lower": "Lower than suggested: {{low}} - {{high}}",
   "privacy": "Privacy",
   "privacy-and-security": "Privacy and security",
   "privacy-photos": "Profile Photo Privacy",
