Simplify adding new chains (#22353)
* ref: isolate chain definitions

* moved networks to wallet context

* ref: removed redundant block explorer url definitions

* fix: removed more network mentions

* ref: removed remaining network dependencies

* test: fixed tests

* ref: restructured networks

* fix: removed unused network utils

* ref: removed unused network-preferences sheet

* ref: simplified the network api

* ref: removed networks dependencies (more)

* ref: simplified chain definition to use status-go values

* test: fixed unit tests

* fix: removed most usages of utils.ethereum.chain ns in status-im

* ref: removed utils.network ns and deprecated utils.ethereum.chain ns

* ref: profile/testnet? and networks fns instead of manual extraction

* feat: added doc for adding new chains

* test: added tests for networks.core

* fix: removed network names from translations

* feat: added schema for network rpc data-store

* fix: default networks not defined correctly

* doc: adjusted the add new chains doc

* fix: bridge network subscription

* ref: moved db functions (networks/profile) to respective db ns

* fix: make sure block explorer url ends with "/"

* fix: wallet connect sessions not showing up

* fix: lint

--- a/translations/en.json
+++ b/translations/en.json
@@ -154,8 +154,6 @@
   "approved-amount-symbol": "Approved {{token-amount}} {{token-symbol}}",
   "approving-amount-symbol": "Approving {{token-amount}} {{token-symbol}}...",
   "apr": "Apr",
-  "arbiscan": "Arbiscan",
-  "arbitrum": "Arbitrum",
   "are-not-allowed": "{{check} are not allowed",
   "are-you-sure": "Are you sure?",
   "are-you-sure-description": "You will not be able to see the whole seed phrase again",
@@ -201,7 +199,6 @@
   "backup-through-waku": "Backup through waku",
   "bad-fees-description": "Your priority fee is below our suggested parameters.",
   "balance": "Balance",
-  "base": "Base",
   "base-chain-available-info": "Base chain is now on Status  - view your assets, interact with dApps and swap tokens",
   "be-safe-with-secure-cold-wallet": "Be safe with secure cold wallet",
   "begin-set-up": "Begin setup",
@@ -1039,7 +1036,6 @@
   "ethereum-address": "Ethereum address",
   "ethereum-node-started-incorrectly-description": "Ethereum node was started with incorrect configuration, application will be stopped to recover from that condition. Configured network id = {{network-id}}, actual = {{fetched-network-id}}",
   "ethereum-node-started-incorrectly-title": "Ethereum node started incorrectly",
-  "etherscan": "Etherscan",
   "etherscan-lookup": "Look up on Etherscan",
   "everyone": "Everyone",
   "everyone-mention": "everyone",
@@ -1939,7 +1935,6 @@
   "opening-buy-crypto": "Opening {{site}}...",
   "opensea": "OpenSea",
   "optimal": "Optimal",
-  "optimism": "Optimism",
   "optional": "optional",
   "or": "OR",
   "or-tap": "or tap",
@@ -2440,11 +2435,7 @@
   "share-image": "Share image",
   "share-invite-link": "Share an invite link",
   "share-link": "Share link",
-  "share-link-to-arb": "Share link to Arbiscan",
-  "share-link-to-base": "Share link to Basescan",
-  "share-link-to-eth": "Share link to Etherscan",
-  "share-link-to-oeth": "Share link to Optimism Explorer",
-  "share-link-to-status-explorer": "Share link to Status Explorer",
+  "share-link-to-block-explorer": "Share link to {{block-explorer-name}}",
   "share-logs": "Share logs",
   "share-my-profile": "Share my profile",
   "share-opensea-link": "Share OpenSea link",
@@ -2865,11 +2856,7 @@
   "via": "via",
   "via-card-or-bank": "Via card or bank",
   "view": "View",
-  "view-address-on-arbiscan": "View address on Arbiscan",
-  "view-address-on-basescan": "View address on Basescan",
-  "view-address-on-etherscan": "View address on Etherscan",
-  "view-address-on-optimistic": "View address on Optimistic",
-  "view-address-on-status-explorer": "View address on Status Explorer",
+  "view-address-on-block-explorer": "View address on {{block-explorer-name}}",
   "view-channel-members-and-details": "View channel members and details",
   "view-community-rules": "View Community Rules",
   "view-cryptokitties": "View in CryptoKitties",
@@ -2879,10 +2866,7 @@
   "view-etheremon": "View in Etheremon",
   "view-gitcoin": "View in Gitcoin",
   "view-members": "View members",
-  "view-on-arb": "View on Arbiscan",
-  "view-on-base": "View on Basescan",
-  "view-on-eth": "View on Etherscan",
-  "view-on-oeth": "View on Optimism Explorer",
+  "view-on-block-explorer": "View on {{block-explorer-name}}",
   "view-on-opensea": "View on OpenSea",
   "view-on-status-explorer": "View on Status Explorer",
   "view-pinned-messages": "View pinned messages",
