feat(profile): Add new flow to backup account's seed phrase into settings (#22387)
Remove old flow

Integrate new flow into settings

Add shell variant for the backup recovery phrase flow and perform some UI fixes

Add bottom inset to quo.overlay

Add one missing quo.counter `blur` variant

--- a/translations/en.json
+++ b/translations/en.json
@@ -476,7 +476,7 @@
   "confirm": "Confirm",
   "confirm-account-origin": "Confirm account origin",
   "confirm-and-leave": "Confirm and leave",
-  "confirm-backup": "Confirm backup",
+  "confirm-backup": "Check your backup",
   "confirm-changes": "Confirm changes",
   "confirm-new-password": "Confirm new password",
   "confirm-pairing-code-placeholder": "Confirm your pairing code...",
@@ -816,8 +816,8 @@
   "dismiss": "Dismiss",
   "display": "Display",
   "display-collectibles": "Display collectibles",
-  "do-not-cheat": "Don't try to cheat",
-  "do-not-cheat-description": "These 12 words give access to all of your funds so it is important that you write them in the correct order, take it seriously.",
+  "do-not-cheat": "Verify your backup",
+  "do-not-cheat-description": "Make sure you wrote down the words in the correct order.",
   "do-not-quit": "Do not quit the application or turn off your device. Doing so will lead to data corruption, loss of your Status profile and the inability to use Status.",
   "do-not-quit-the-application": "Do not quit the application",
   "do-not-share": "Do not share",
@@ -2329,7 +2329,7 @@
   "see-details": "See details",
   "see-it-again": "SEE IT AGAIN",
   "see-keycard-ready": "Let’s see what’s on your Keycard. Ready?",
-  "see-recovery-phrase-again": "See recovery phrase again",
+  "see-recovery-phrase-again": "View recovery phrase",
   "see-sticker-set": "See the full sticker set",
   "see-suggestions": "See suggestions",
   "seed-key-uid-mismatch": "Seed doesn't match",
