[#22318] fix: re-enabled watched accounts with limited number (#22390)
* [#22318] fix: re-enabled watched accounts with limited number

* [#22397] fix: display remove account button for watch only account

* [#22318] feat: display toast message when reached limit

* [#22318] fix: set max account to 20

* [#22390] fix: hide activity tab and filter out watch only account

* [#22411] fix: network drawer operable account balance

--- a/translations/en.json
+++ b/translations/en.json
@@ -2950,6 +2950,7 @@
   "watch-only": "Watch-only",
   "watched-account-removed": "Watched address has been removed",
   "watched-address": "Watched address",
+  "watched-addresses-limit-reached-toast": "Limit of 20 watched addresses reached: remove a watched address to add a new one.",
   "ways-to-buy": "Ways to buy",
   "ways-to-buy-assets": "Ways to buy assets",
   "wc-brand-guide": "Guidance on using branding such as trademarks and logos",
