Unify onboarding copy across Mobile and Desktop apps (#22486)

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,4 +1,5 @@
 {
+  "a-card-shaped-hardware-wallet": "A card-shaped hardware wallet",
   "about": "About",
   "about-app": "About",
   "about-gas-amount": "AKA gas limit. Refers to the maximum number of computational steps (or units of gas) that a transaction can consume. It represents the complexity or amount of work required to execute a transaction or smart contract.\n\nThe gas limit is a cap on how much work the transaction can do on the blockchain. If the gas limit is set too low, the transaction may fail due to insufficient gas.",
@@ -200,7 +201,6 @@
   "bad-fees-description": "Your priority fee is below our suggested parameters.",
   "balance": "Balance",
   "base-chain-available-info": "Base chain is now on Status  - view your assets, interact with dApps and swap tokens",
-  "be-safe-with-secure-cold-wallet": "Be safe with secure cold wallet",
   "begin-set-up": "Begin setup",
   "below-base-fee": "max fee below base fee",
   "beta": "Beta",
@@ -1947,7 +1947,7 @@
   "outgoing-transaction": "Outgoing transaction",
   "overview": "Overview",
   "own-keycard": "Already own a Keycard?",
-  "own-your-crypto": "Own, buy and swap your crypto",
+  "own-your-crypto": "Own your crypto",
   "owner": "Owner",
   "page-camera-request-blocked": "camera requests blocked. To enable camera requests go to Settings",
   "page-would-like-to-use-camera": "would like to use your camera",
@@ -2831,7 +2831,7 @@
   "use-keypair-keycard": "Use the key pair stored on Keycard",
   "use-photo": "Use Photo",
   "use-recovery-phrase": "Use recovery phrase",
-  "use-the-multichain-wallet": "Enjoy your multi-chain self-custodial wallet",
+  "use-the-multichain-wallet": "Multi-chain wallet for swaps and buys",
   "use-valid-contact-code": "Please enter or scan a valid chat key or username",
   "user-blocked": "{{username}} blocked",
   "user-deleted-a-message": "{{user}} deleted a message",
