feat_: allow user to change default app log level during pre-login (#22425)
* feat_: support pre-login log setting(WIP)

* nix: add gradle deps

* chore: update status-go version

https://github.com/status-im/status-go/compare/614000a1...50a1c9ff

* feat: implement MMKV storage functionality for ClojureScript

- Added MMKV instance for persistent storage
- Implemented basic operations: set/get string, boolean, number, and object
- Included methods for key management: contains-key?, delete-key, clear-all, and get-all-keys
- Integrated Transit for serialization/deserialization of ClojureScript data structures

* feat_: enhance logging functionality with pre-login log level settings

- Introduced a new view for managing pre-login log levels.
- Updated logging configuration to utilize MMKV for persistent storage of log levels.
- Refactored existing logging functions to integrate new log level management.
- Improved user experience by allowing log level changes before login.
- Added constants for pre-login log level key and report email.

* chore_: rebase

* ios: pin libwebp at 1.0.0

* chore_: mock mmkv

* chore_: address review feedback from Parvesh

* chore_: update status-go version and commit details

* fix_: remove redundant closing brackets in logging view component

* refactor_: simplify get functions in MMKV by using if-let for value retrieval

- Updated get-string, get-number, and get-object functions to use if-let for cleaner code.
- Removed redundant nil checks, improving readability and maintainability.

* refactor_: replace direct JS calls with oops.core for MMKV operations

- Updated all MMKV operations to use oops.core for method calls, enhancing error handling and improving code consistency.
- Refactored store, get, contains-key?, delete-key, clear-all, and get-all-keys functions to utilize oops/ocall.

* refactor_: rename store function to set-value for clarity

- Updated the MMKV store function to set-value, improving code readability.
- Adjusted the l

--- a/translations/en.json
+++ b/translations/en.json
@@ -2412,6 +2412,7 @@
   "set-dapp-access-permissions": "Set DApp access permissions",
   "set-max": "Set max",
   "set-nickname-toast": "You have renamed {{primary-name}} as {{nickname}}",
+  "set-pre-login-log-level": "Set pre-login log",
   "set-spending-cap": "Set spending cap",
   "set-spending-cap-of": "Set spending cap of",
   "set-up-sync": "Set up sync",
