feat: integrate firebase sdk for ios and android (#21983)
This change re-introduces the Firebase SDK via a react-native library. This has been done to support remote notifications via push-notifications from Firebase Cloud Messaging. This initial integration supports receiving FCM notifications on both iOS and Android platforms.

This change also attempts to ensure that FDroid builds will not include Firebase or Google Play Services inside the build.

--- a/translations/en.json
+++ b/translations/en.json
@@ -130,7 +130,9 @@
   "allow": "Allow",
   "allow-and-send": "Allow and send",
   "allow-mention-notifications": "Show @ mentions",
+  "allow-messenger-notifications": "Show messenger notifications",
   "allow-new-contact-requests": "Allow new contact requests",
+  "allow-news-notifications": "Show news notifications",
   "allowing-authorizes-this-dapp": "Allowing authorizes this DApp to retrieve your wallet address and enable Web3",
   "alphabetically": "Alphabetically",
   "already-have-asset": "You already have this asset",
