🔖 refactor: update references from "Mainnet" to "Ethereum" (#22460)
* refactor: update references from "Mainnet" to "Ethereum" across multiple components and tests

* 🕊️ Update status-go to reflect network name change

* ➕ Replace more uses of Mainnet to Ethreum

* 🐛 Fix issue with incorrect name on bridge>send to

* ⬆️ Update quo component that hardcodes network val

* 🗂️ Update network name on txn confirm and nfts

* 😅 Found one more instance of Mainnet

- Fix lint
- Force push because I pushed proxy password by mistake

* 🤝 Update status go

* 🏷️ Status go tag

--- a/translations/en.json
+++ b/translations/en.json
@@ -926,7 +926,7 @@
   "ens-name-content": "Custom alias for your chat key that you can register using the Ethereum Name Service. ENS names are decentralized usernames.",
   "ens-name-not-found": "Cannot resolve ENS name",
   "ens-name-title": "ENS Name",
-  "ens-network-restriction": "Only available on Mainnet",
+  "ens-network-restriction": "Only available on Ethereum",
   "ens-no-usernames": "You don't have any username connected",
   "ens-or-chat-key": "ENS or Chatkey",
   "ens-powered-by": "Powered by Ethereum Name Services",
@@ -1581,7 +1581,7 @@
   "main-currency": "Main currency",
   "main-networks": "Main networks",
   "main-wallet": "Main Wallet",
-  "mainnet": "Mainnet",
+  "mainnet": "“Ethereum",
   "make-admin": "Make admin",
   "make-moderator": "Make moderator",
   "make-one-it-is-easy-we-promise": "Make one, it’s easy, we promise!",
