Basic market page (#22523)
* Market page basic implementation

* fix safe area

* feature flag

* review notes fixed

--- a/translations/en.json
+++ b/translations/en.json
@@ -1598,6 +1598,8 @@
   "mark-as-read": "Mark as read",
   "mark-untrustworthy": "Mark as Untrustworthy",
   "mark-user-untrustworthy": "Mark {{username}} as untrustworthy",
+  "market": "Market",
+  "market-cap": "Market cap",
   "master-account": "Master account",
   "max": "Max: {{number}}",
   "max-2-decimals": "Max. 2 decimals",
