--- a/translations/en.json
+++ b/translations/en.json
@@ -1071,6 +1071,7 @@
   "favourite-description": "Your favourite websites will appear here",
   "favourites": "Favourites",
   "favourites-empty": "Addresses added to favourites will appear here",
+  "feature-flags": "Feature Flags",
   "feature-unavailable": "Feature unavailable",
   "feature-unavailable-for-keycard-description": "It’s not currently supported for Keycard users.",
   "feature-unavailable-info": "If you'd like this feature on mobile, feel free to ",
