feat(wallet)_: Add BNB Smart Chain (#22417)
This commit 
- adds support for BNB Smart Chain
- removes categorisation (L1/L2) of chains in settings and token network selection


---------

Signed-off-by: Mohamed Javid <19339952+smohamedjavid@users.noreply.github.com>
Co-authored-by: Shivek Khurana <khuranashivek@outlook.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -65,7 +65,6 @@
   "add-contact": "Add contact",
   "add-custom-token": "Add custom token",
   "add-display-name-and-picture": "Add an optional display name and profile picture so others can easily recognize you",
-  "add-eth": "Add ETH",
   "add-favourite": "Add favourite",
   "add-mailserver": "Add Status node",
   "add-me-to-your-contacts": "Please add me to your contacts",
@@ -83,6 +82,7 @@
   "add-to-contacts": "Add to contacts",
   "add-to-contacts-text": "By adding a user to your contact list, you share your wallet address",
   "add-to-favourites": "Add to favourites",
+  "add-token": "Add {{token}}",
   "add-watch-account": "Add a watch-only account",
   "add-watched-address": "Add watched address",
   "added": "added",
@@ -277,6 +277,8 @@
   "browsing-site-blocked-go-back": "Go back",
   "browsing-site-blocked-title": "This site is blocked",
   "browsing-title": "Browse",
+  "bsc": "BNB Smart Chain",
+  "bsc-collectibles-not-supported": "Displaying collectibles on BNB Smart Chain is not currently supported by Status.",
   "bug-report": "Report a bug",
   "bug-report-description": "* Description",
   "bug-report-description-placeholder": "Required, can't be empty",
