[#22385] fix: tx setting current value as a range (#22568)
* [#22385] fix: tx setting current value as a range

* [#22385] fix: priority fee value issue for custom settings

* [#22385] fix: max priority fee be the same as desktop

--- a/translations/en.json
+++ b/translations/en.json
@@ -2096,7 +2096,7 @@
   "principles": "Principles",
   "priority": "Priority",
   "priority-fee": "Priority fee",
-  "priority-fee-current": "Current: {{current}}",
+  "priority-fee-current": "Current: {{low}} - {{high}}",
   "priority-fee-higher": "Higher than necessary: {{low}} - {{high}}",
   "priority-fee-higher-max-base": "Higher than max base fee: {{max-base-fee}}",
   "priority-fee-lower": "Lower than suggested: {{low}} - {{high}}",
