--- a/translations/en.json
+++ b/translations/en.json
@@ -2680,6 +2680,7 @@
   "three-words-description": "You should see these 3 words before signing each transaction",
   "three-words-description-2": "If you see a different combination, cancel the transaction and sign out",
   "thu": "Thu",
+  "time-24h": "24h",
   "time-in-sec": "{{seconds}} sec",
   "timeline": "Timeline",
   "tip-cap": "Tip cap",
