feat: Update the enable-notifications flows and notification settings UI (#22524)
This change integrates the Firebase news notifications into the onboarding flow. This change also introduces some changes to the notifications settings screen to match the recent designs and behaviors. Note, that these changes are currently still behind a feature-flag.

--- a/translations/en.json
+++ b/translations/en.json
@@ -132,10 +132,14 @@
   "all-time": "All time",
   "allow": "Allow",
   "allow-and-send": "Allow and send",
+  "allow-community-mentions-notifications-description": "Mentions and replies",
   "allow-mention-notifications": "Show @ mentions",
+  "allow-messages-and-communities-notifications": "Messages and communities",
+  "allow-messages-and-communities-notifications-description": "1-1 and group messages, replies and mentions in communities. Possible high battery usage.",
   "allow-messenger-notifications": "Show messenger notifications",
   "allow-new-contact-requests": "Allow new contact requests",
-  "allow-news-notifications": "Show news notifications",
+  "allow-news-notifications": "News from Status",
+  "allow-news-notifications-description": "Uses Google services, and works even when the app is closed.",
   "allowing-authorizes-this-dapp": "Allowing authorizes this DApp to retrieve your wallet address and enable Web3",
   "alphabetically": "Alphabetically",
   "already-have-asset": "You already have this asset",
@@ -919,8 +923,12 @@
   "enable-link-previews": "Enable link previews in chat?",
   "enable-network-access": "Enable network access",
   "enable-network-to-sign-requests": "to sign requests from",
-  "enable-notifications-sub-title": "Receive notifications about your new messages or wallet transactions",
+  "enable-news-notifications-third-party": "Include notifications delivered through third-party providers",
+  "enable-notifications": "Enable notifications",
+  "enable-notifications-info-description": "Describe how using Firebase affects privacy.",
+  "enable-notifications-sub-title": "Receive notifications about your new messages, wallet transactions and news",
   "enable-store-confirmations": "Enable Store confirmations?\n\nYou’ll need to log in again.",
+  "enabled-push-notifications": "Enable push notifications",
   "encrypt-with-password": "Encrypt with password",
   "encrypted-key-pairs": "Encrypted key pairs",
   "encrypted-key-pairs-code": "Encrypted key pairs code",
@@ -1902,7 +1910,8 @@
   "notification-settings": "Notification settings",
   "notifications": "Notifications",
   "notifications-marked-as-read": "{{count}} notifications marked as read",
-  "notifications-non-contacts": "Notifications from non-contacts",
+  "notifications-non-contacts": "From non-contacts",
+  "notifications-non-contacts-description": "Contact requests and group messages",
   "notifications-preferences": "Notification preferences",
   "notifications-servers": "Notification servers",
   "notifications-switch": "Show notifications",
@@ -2160,6 +2169,8 @@
   "push-failed-transaction-body": "{{value}} {{currency}} to {{to}}",
   "push-inbound-transaction": "You received {{value}} {{currency}}",
   "push-inbound-transaction-body": "From {{from}} to {{to}}",
+  "push-notifications-blocked-android": "Android push notifications are disabled.",
+  "push-notifications-blocked-ios": "iOS push notifications are disabled.",
   "push-notifications-server-enabled": "Server enabled",
   "push-notifications-servers": "Push notification servers",
   "push-outbound-transaction": "You sent {{value}} {{currency}}",
