fix(wallet)_: Fee mode and custom TX fields for non EIP 1559 TX (#22597)
This commit:
- Fixes custom TX settings fields shown for non-EIP-1559 TX (Eg, BSC chain TX)
    - Shows Gas Price, Gas Amount, and Nonce for non-EIP-1559 TX
    - Shows Base Fee, Priority Fee, Gas Amount and Nonce for EIP-1559 TX
- Shows only Fast (medium) gas fee mode along with custom mode for non-EIP-1559 TX
- Hides base gas fee field in TX settings for Status Network, as it is gasless
- Fixes the swap amount persisted after the swap TX

Signed-off-by: Mohamed Javid <19339952+smohamedjavid@users.noreply.github.com>

--- a/translations/en.json
+++ b/translations/en.json
@@ -3,6 +3,7 @@
   "about": "About",
   "about-app": "About",
   "about-gas-amount": "AKA gas limit. Refers to the maximum number of computational steps (or units of gas) that a transaction can consume. It represents the complexity or amount of work required to execute a transaction or smart contract.\n\nThe gas limit is a cap on how much work the transaction can do on the blockchain. If the gas limit is set too low, the transaction may fail due to insufficient gas.",
+  "about-gas-price": "Gas price in blockchain refers to the fee users pay to process transactions on the network. It fluctuates based on network demand and affects how quickly transactions are confirmed.",
   "about-key-storage-content": "Status will never access your private key. Be sure to backup your seed phrase. If you lose your phone it is the only way to access your keys.",
   "about-key-storage-title": "About key storage",
   "about-max-base-fee": "When your transaction gets included in the block, any difference between your max base fee and the actual base fee will be refunded.\n\nNote: the ETH amount shown for this value is calculated: max base fee (in GWEI) * max gas amount.",
@@ -1146,6 +1147,11 @@
   "gas-amount-lower-than": "Lower than current (current: {{current}})",
   "gas-limit": "Gas limit",
   "gas-price": "Gas price",
+  "gas-price-current": "Current: {{current}} GWEI",
+  "gas-price-higher": "Too high. Maximum: {{high}}",
+  "gas-price-higher-than": "Higher than necessary (current: {{current}})",
+  "gas-price-lower": "Too low. Minimum: {{low}}",
+  "gas-price-lower-than": "Lower than current (current: {{current}})",
   "gas-used": "Gas used",
   "gated": "Gated",
   "generate-a-key": "Generate keys",
@@ -2457,6 +2463,7 @@
   "set-spending-cap": "Set spending cap",
   "set-spending-cap-of": "Set spending cap of",
   "set-up-sync": "Set up sync",
+  "set-your-own-fees-and-nonce": "Set your own fees and nonce",
   "settings": "Settings",
   "setup-group-chat": "Setup group chat",
   "setup-keycard": "Setup Keycard",
